--- a/Typeface/css/wilkinson-typeface.webflow.css
+++ b/Typeface/css/wilkinson-typeface.webflow.css
@@ -87,9 +87,12 @@
 }
 
 .thin {
-  height: 4.5vh;
+  position: relative;
+  display:block;
+  height: 40%;
+  width:100%;
   max-height: 50%;
-  max-width: none;
+  max-width: 100%;
   background-image: url('../images/mf5m_83oh_120820.jpg');
   background-position: 0px 0px;
   background-size: contain;
@@ -101,8 +104,10 @@
 }
 
 .branch {
-  width: 3vw;
-  height: 5vh;
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 100%;
   background-image: url('../images/branch_black.png');
   background-position: 0px 0px;
   background-size: contain;
