--- a/Typeface/css/piecesFire.css
+++ b/Typeface/css/piecesFire.css
@@ -32,25 +32,29 @@
     top:0%;
     left:0%;
     border: 3px solid #ffb35c;
-    -webkit-box-shadow: inset 0px 0px 24px 8px #e8be13, inset 0px 0px 20px 24px rgba(167, 78, 5, 0.5), 0px 0px 24px 8px #facd37, 0px 0px 60px 40px rgba(156, 79, 3, 0.6), 0px 0px 5px 5px #1c0901eb, inset 0px 0px 5px 5px #c4720f42;
-    -moz-box-shadow: inset 0px 0px 24px 8px #e8be13, inset 0px 0px 20px 24px rgba(167, 78, 5, 0.5), 0px 0px 24px 8px #facd37, 0px 0px 60px 40px rgba(156, 79, 3, 0.6), 0px 0px 5px 5px #1c0901eb, inset 0px 0px 5px 5px #c4720f42;
-    box-shadow: inset 0px 0px 24px 8px #e8be13, inset 0px 0px 20px 24px rgba(167, 78, 5, 0.5), 0px 0px 24px 8px #facd37, 0px 0px 60px 40px rgba(156, 79, 3, 0.6), 0px 0px 5px 5px #1c0901eb, inset 0px 0px 5px 5px #c4720f42;
+    -webkit-box-shadow: inset 0px 0px 24px 8px #c5a214, inset 0px 0px 20px 24px rgba(109, 50, 2, 0.5), 0px 0px 24px 8px #c49806, 0px 0px 60px 40px rgba(156, 39, 3, 0.6), 0px 0px 5px 5px #1c0901eb, inset 0px 0px 5px 5px #c4720f42;
+    -moz-box-shadow: inset 0px 0px 24px 8px #c5a214, inset 0px 0px 20px 24px rgba(109, 50, 2, 0.5), 0px 0px 24px 8px #c49806, 0px 0px 60px 40px rgba(156, 39, 3, 0.6), 0px 0px 5px 5px #1c0901eb, inset 0px 0px 5px 5px #c4720f42;
+    box-shadow: inset 0px 0px 24px 8px #c5a214, inset 0px 0px 20px 24px rgba(109, 50, 2, 0.5), 0px 0px 24px 8px #c49806, 0px 0px 60px 40px rgba(156, 39, 3, 0.6), 0px 0px 5px 5px #1c0901eb, inset 0px 0px 5px 5px #c4720f42;
   }
-  95% {
+  88% {
     opacity: 50%;
     height: 100%;
     width: 100%;
-    border: 3px solid #FFFB5C;
+    border: 5px solid #FFFB5C;
     -webkit-box-shadow: inset 0px 0px 24px 8px #FFFB5C, inset 0px 0px 20px 24px rgba(243, 108, 0,0.5), 0px 0px 24px 8px #FFFB5C, 0px 0px 60px 40px rgba(241, 124, 4, 0.6), 0px 0px 16px 22px #1c0901eb, inset 0px 0px 58px 44px #c4720f42;
     -moz-box-shadow: inset 0px 0px 24px 8px #FFFB5C, inset 0px 0px 20px 24px rgba(243, 108, 0,0.5), 0px 0px 24px 8px #FFFB5C, 0px 0px 60px 40px rgba(241, 124, 4, 0.6), 0px 0px 16px 22px #1c0901eb, inset 0px 0px 58px 44px #c4720f42;
     box-shadow: inset 0px 0px 24px 8px #FFFB5C, inset 0px 0px 20px 24px rgba(243, 108, 0,0.5), 0px 0px 24px 8px #FFFB5C, 0px 0px 60px 40px rgba(241, 124, 4, 0.6), 0px 0px 16px 22px #1c0901eb, inset 0px 0px 58px 44px #c4720f42;
   }
-  100% {
-    opacity: 0;
+  90% {
+    height:0%;
+    width:0%;
     border: 3px solid #161617;
     -webkit-box-shadow: inset 0px 0px 6px 2px #fffb5c00, inset 0px 0px 8px 3px rgb(52, 21, 0), 0px 0px 6px 2px #3f1c0100, 0px 0px 15px 10px rgba(105, 46, 0, 0), 0px 0px 17px 18px #401d02eb, inset 0px 0px 29px 22px #c4720f00;
     -moz-box-shadow: inset 0px 0px 6px 2px #fffb5c00, inset 0px 0px 8px 3px rgb(52, 21, 0), 0px 0px 6px 2px #3f1c0100, 0px 0px 15px 10px rgba(105, 46, 0, 0), 0px 0px 17px 18px #401d02eb, inset 0px 0px 29px 22px #c4720f00;
     box-shadow: inset 0px 0px 6px 2px #161617, inset 0px 0px 8px 3px #161617, 0px 0px 6px 2px #161617, 0px 0px 15px 10px #161617, 0px 0px 17px 18px #161617, inset 0px 0px 29px 22px #161617;
+  }
+  100% {
+    opacity: 0;
   }
 }
 
