work drag drop and start word js
drag and drop still not completing working it just doesn't update letter position but it does fall apart

letters in word.html will not hover state but when clicked the whole letter catches fire and the fire could spread to other letters

--- a/Typeface/css/wilkinson-typeface.webflow.css
+++ b/Typeface/css/wilkinson-typeface.webflow.css
@@ -67,6 +67,7 @@
   background-position: 0px 0px;
   background-size: contain;
   background-repeat: repeat;
+  border-radius: 50%;
 }
 
 .letter {
@@ -98,6 +99,7 @@
   background-position: 0px 0px;
   background-size: contain;
   background-repeat: repeat;
+  border-radius: 50%;
 }
 
 .filler {
