--- a/Typeface/css/wilkinson-typeface.webflow.css
+++ b/Typeface/css/wilkinson-typeface.webflow.css
@@ -93,10 +93,10 @@
   max-height: 100%;
   max-width: 100%;
   background-color: transparent;
-  /*background-image: url('../images/scorched.jpg');*/
-  background: rgb(50, 30, 1);/*linear-gradient(50deg, #fcd124 60%, #f48404e3 80%);*/
+  background-image: url('../images/charcoal.jpg');
+  /*background: rgb(50, 30, 1);/*linear-gradient(50deg, #fcd124 60%, #f48404e3 80%);*/
   background-position: 0px 0px;
-  background-size: contain;
+  background-size: cover;
   background-repeat: repeat;
   border-style: solid;
   border-color:rgb(0, 0, 0);
@@ -117,10 +117,10 @@
   width:100%;
   max-height: 50%;
   max-width: 100%;
- /* background-image: url('../images/scorched.jpg');*/
+  background-image: url('../images/charcoal.jpg');
   background: rgb(50, 30, 1); /*linear-gradient(50deg, #000000 20%, #392600 40%, #461901 60%, #6d2a00e3 80%);*/
   background-position: 0px 0px;
-  background-size: contain;
+  background-size: cover;
   background-repeat: repeat;
   border-style: solid;
   border-color:rgb(0, 0, 0);
