--- a/css/arrow.css
+++ b/css/arrow.css
@@ -42,3 +42,21 @@
 .arrow:hover {
   background-color: rgb(255, 255, 255);
 }
+
+@media screen and (max-width: 500px) {
+  .arrow {
+    display: none;
+  }
+
+  .arrow::after {
+    display: none;
+  }
+
+  .arrow::before {
+    display: none;
+  }
+
+  .icon {
+    display: none;
+  }
+}
