--- a/css/wilkinson-typeface.webflow.css
+++ b/css/wilkinson-typeface.webflow.css
@@ -38,12 +38,26 @@
   -webkit-align-content: stretch;
   -ms-flex-line-pack: stretch;
   align-content: stretch;
-  -ms-grid-columns: 33% 33% 33%;
-  grid-template-columns: 33% 33% 33%;
-  -ms-grid-rows: 20% 20% 20% 20% 20%;
-  grid-template-rows: 20% 20% 20% 20% 20%;
 }
 
+@media screen and (max-width: 2000px) {
+  .grid {
+    -ms-grid-columns: 33% 33% 33%;
+    grid-template-columns: 33% 33% 33%;
+    -ms-grid-rows: 20% 20% 20% 20% 20%;
+    grid-template-rows: 20% 20% 20% 20% 20%;
+  }
+}
+/*
+@media screen and (max-width: 479px) {
+  .grid {
+    -ms-grid-columns: 50%;
+    grid-template-columns: 50%;
+    -ms-grid-rows: 20% 20% 20% 20% 20%;
+    grid-template-rows: 20% 20% 20% 20% 20%;
+  }
+}
+*/
 .big-container {
   padding-top: 5vw;
   display:flex;
@@ -70,6 +84,22 @@
   grid-template-columns: auto auto auto auto auto auto auto auto auto;
   -ms-grid-rows: auto auto auto;
   grid-template-rows: auto auto auto;
+}
+
+@media screen and (max-width: 479px) {
+
+  .container {
+    -ms-grid-columns: 33% 33% 33%;
+    grid-template-columns: 33% 33% 33%;
+    -ms-grid-rows: 20% 20% 20% 20% 20%;
+    grid-template-rows: 20% 20% 20% 20% 20%;
+  }
+}
+
+@media (orientation:landscape) {
+  .full-grid {
+    display: none;
+  }
 }
 
 #full-grid {
