--- a/css/wilkinson-typeface.webflow.css
+++ b/css/wilkinson-typeface.webflow.css
@@ -18,6 +18,20 @@
   background: rgb(51, 51, 51);
 }
 
+#toBreakpoints {
+  text-align: center;
+  border-style: solid;
+  border-color: rgb(255, 119, 0);
+  width: 9vw;
+  margin-left: 3vw;
+  margin-top: 0.5vw;
+  margin-bottom: -2vw;
+  font-size:large;
+  background-color: transparent;
+  color: white;
+  padding: 0.5vw;
+}
+
 .w-layout-grid {
   display: -ms-grid;
   display: grid;
